--- a/flyway.conf
+++ b/flyway.conf
@@ -1,4 +1,4 @@
-flyway.url=jdbc:postgresql://db:5432/translations
+flyway.url=jdbc:postgresql://db:5432/translation
 flyway.user=app_user
 flyway.password=secret
-flyway.locations=filesystem:/flyway/sql
+flyway.locations=filesystem:/flyway/migration/db
